# dbird

./: .gitignore  Dockerfile  Makefile  Makefile.am  README.md  configure.ac  dbird.pc.in
applications/connection-manager-app/: connection-manager-app.h
applications/push-data-app/: push-data-app.h
applications/read-data-app/: read-data-app.h
bird-types/: bird-mids.h  checkin-bundle-parser-json.h  checkin-bundle-parser-mifare-block.h  checkin-bundle-parser-sip-block.h  checkin-bundle-parser.h  checkin-bundle.h
ccjuice/: ccjuice.h  component.h  inject.h  module.h  provide.h  typelist.h
injection/: standalone-component.h
launcher/: makefile  master.cc  master.cpp  slave.cc  slave.cpp  standalone.cc  standalone.cpp
protocols/http/: http-interface.h  http.h
protocols/modem/: modem-interface.h
protocols/rfid/: mifare.h
protocols/sip/: sip-interface.h  sip-mifare.h  sip-net.h
services/connection-service/: connection-http.h  connection-interface.h  connection-sip.h
services/data-access-service/: data-access-interface.h  data-access-persistency.h
services/data-reader-service/: data-reader-interface.h  data-reader-mifare.h  data-reader-sip.h
services/server-service/: server-interface.h  server-master-slave.h  server-modem.h
system/ipc/: message.h
system/persistency/: checkin-bundle-access-fs.h  checkin-bundle-access-volatile.h  checkin-bundle-access.h  dal.h
system/worker/: bundle.h  dispatcher.h  message-handler.h  worker.h
tst/: Makefile.am  bird-types-gmock.h  connection-http.cc  connection-manager-app-gmock.h  connection-manager-app.cc  connection-sip.cc  data-access-persistency.cc  data-reader-sip.cc  makefile  protocols-gmock.h  push-data-app-gmock.h  push-data-app.cc  read-data-app.cc  services-gmock.h  system-gmock.h
utilities/meta/: enum-list.h  nullable.h  subscribable.h  type-list.h  xmac.h
